--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -116,7 +116,7 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   .card,
   .footer {
     border-color: #222;
@@ -127,4 +127,4 @@
   .logo img {
     filter: invert(1);
   }
-}
+} */
